# haskell-nix-template

./: .ghci  Main.hs  README.md  default.nix  haskell-nix-template.cabal  hs-fun.cabal
app/: Main.hs
test/: Main.hs
