name:                hs-fun
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/abradley2/hs-fun
license:             BSD3
author:              Tony
maintainer:          Tony
copyright:           Tony
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

executable hs-fun
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , scotty
                    , aeson
                    , bytestring
                    , text
                    , http-conduit
                    , http-client

